// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create a Glue Job outside the construct 1`] = `
Object {
  "Resources": Object {
    "ExistingJob": Object {
      "Properties": Object {
        "AllocatedCapacity": 2,
        "Command": Object {
          "Name": "existingJob",
          "PythonVersion": "2",
          "ScriptLocation": "s3://existingFakeLocation/existingScript",
        },
        "GlueVersion": "1",
        "MaxCapacity": 4,
        "NumberOfWorkers": 2,
        "Role": Object {
          "Fn::GetAtt": Array [
            "ExistingJobRole8F750976",
            "Arn",
          ],
        },
        "WorkerType": "Standard",
      },
      "Type": "AWS::Glue::Job",
    },
    "ExistingJobRole8F750976": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazon.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Existing role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`Test custom deployment properties 1`] = `
Object {
  "Resources": Object {
    "ETLJob": Object {
      "Properties": Object {
        "AllocatedCapacity": 2,
        "Command": Object {
          "Name": "testETLJob",
          "PythonVersion": "3",
          "ScriptLocation": "s3://existingFakeLocation/existingScript",
        },
        "GlueVersion": "1",
        "MaxCapacity": 4,
        "NumberOfWorkers": 2,
        "Role": Object {
          "Fn::GetAtt": Array [
            "ExistingJobRole8F750976",
            "Arn",
          ],
        },
        "SecurityConfiguration": "ETLJobSecurityConfig",
        "WorkerType": "Standard",
      },
      "Type": "AWS::Glue::Job",
    },
    "ExistingJobRole8F750976": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazon.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "Existing role",
      },
      "Type": "AWS::IAM::Role",
    },
    "GlueSecurityConfig": Object {
      "Properties": Object {
        "EncryptionConfiguration": Object {
          "CloudWatchEncryption": Object {
            "CloudWatchEncryptionMode": "SSE-KMS",
            "KmsKeyArn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":alias/aws/glue",
                ],
              ],
            },
          },
          "JobBookmarksEncryption": Object {
            "JobBookmarksEncryptionMode": "CSE-KMS",
            "KmsKeyArn": Object {
              "Fn::Join": Array [
                "",
                Array [
                  "arn:",
                  Object {
                    "Ref": "AWS::Partition",
                  },
                  ":kms:",
                  Object {
                    "Ref": "AWS::Region",
                  },
                  ":",
                  Object {
                    "Ref": "AWS::AccountId",
                  },
                  ":alias/aws/glue",
                ],
              ],
            },
          },
          "S3Encryptions": Array [
            Object {
              "S3EncryptionMode": "SSE-S3",
            },
          ],
        },
        "Name": "ETLJobSecurityConfig",
      },
      "Type": "AWS::Glue::SecurityConfiguration",
    },
    "LogPolicy9292E033": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group/aws-glue/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogPolicy9292E033",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "ExistingJobRole8F750976",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`Test minimal deployment with no properties 1`] = `
Object {
  "Resources": Object {
    "CustomETLJobRole90A83A66": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "glue.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::IAM::Role",
    },
    "ETLJob": Object {
      "Properties": Object {
        "Command": Object {
          "Name": "testETLJob",
          "PythonVersion": "3",
          "ScriptLocation": "s3://fakelocation/script",
        },
        "Role": Object {
          "Fn::GetAtt": Array [
            "CustomETLJobRole90A83A66",
            "Arn",
          ],
        },
        "SecurityConfiguration": "testETLJob",
      },
      "Type": "AWS::Glue::Job",
    },
    "LogPolicy9292E033": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": Array [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "arn:",
                    Object {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:",
                    Object {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    Object {
                      "Ref": "AWS::AccountId",
                    },
                    ":log-group/aws-glue/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "LogPolicy9292E033",
        "Roles": Array [
          Object {
            "Fn::Select": Array [
              1,
              Object {
                "Fn::Split": Array [
                  "/",
                  Object {
                    "Fn::Select": Array [
                      5,
                      Object {
                        "Fn::Split": Array [
                          ":",
                          Object {
                            "Fn::GetAtt": Array [
                              "CustomETLJobRole90A83A66",
                              "Arn",
                            ],
                          },
                        ],
                      },
                    ],
                  },
                ],
              },
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;
